@@ -858,7 +858,7 @@ local function test_cmdline(linegrid)
       cmdline = {
         {
           content = { { '' } },
-          hl_id = 237,
+          hl_id = 242,
           pos = 0,
           prompt = 'Prompt:',
         },
